HEAD
	+ Set version to 8.0.0
	+ Add initial-setup and enable-module scripts
7.1.0
	+ Bump version number
7.0.2
	+ Temporary workaround for apparmor issues
7.0.1
	+ Fix dyndns deps in order to fix the config backup restore
7.0.0
	+ Fix tftpd-hpa service (HPA's ftp server used for thin clients)
	+ Set version number to 7.0.0
6.2.1
	+ Fix DHCP disabled interface not disabled. Add ifaceStatus method.
6.2.0
	+ Set version number to 6.2.0
6.1.1
	+ Respect the dhcp interface state when generating the dhcpd.conf fix #1903 and closes #1905
6.1
	+ Fix Dynamic DNS updates
	+ Set version to 6.1
6.0
	+ Set version to 6.0
5.1.1
	+ Fix parse of DHCP events in syslog
	+ Fix dhcp-parameter-request-list options concatenation
5.1
	+ Supress annoying vendor-class-identifier warnings in zentyal.log
	+ Add TFTP functionality again
	+ Support for options 150 and 155 in commercial editions
	+ Fix module restart in postinst
5.0
	+ Disable TFTP
	+ Display unknown hostnames as 'Unknown' in leases widget instead
	  of an empty string.
4.2
	+ Clarify error message in fixed addresses table
4.1.1
	+ Fix regression in leases information in dashboard widget
4.1
	+ Avoid statement not recognized errors parsing ddns keys in leases file
	+ Set version to 4.1
4.0.1
	+ TFTP service is now properly managed
4.0
	+ Set version to 4.0
	+ Forbid the addition of a fixed addresses object which
	  collides with a range
	+ Restored thin client options for VLANs
	+ Added ComponentNotExists error when losing parent row
3.5
	+ Notify when we are using a Domain in Dynamic DNS when it is
	  about to be removed
	+ Make Zentyal NTP server default choice for ntp server in dhcp
	+ Set version to 3.5
3.4
	+ Fixed ThinClientOptions nextServer value for interfaces other than eth0
	+ More generic help message for thin clients options page
	+ Added HA floating IPs constraints when creating ranges and fixed IPs
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
3.3